--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -212,17 +212,17 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../pages/project.html">Project</a></li>
-                        <li><a href="../pages/blogs.html">Blog</a></li>
-                        <li><a href="../pages/contact.html">Contact</a></li>
+                      <li><a href="../index.html">HOME</a></li>
+                      <li><a href="../pages/project.html">PROJECT</a></li>
+                      <li><a href="../pages/blogs.html">BLOGS</a></li>
+                      <li><a href="../pages/contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h3>Contact Me</h3>
                     <p><strong>Email:</strong> sheikh.vazid.ahmed@gmail.com</p>
                     <p>
-                        <strong>Current Location:</strong> Mangalore, Karnataka
+                        <strong>Current Location:</strong> Bengaluru, Karnataka
                     </p>
                 </div>
             </div>
