--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -1,217 +1,203 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>VAZID - Quiz</title>
-        <link rel="stylesheet" href="../css/styles.css" />
-        <link rel="stylesheet" href="../css/quiz.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
-            rel="stylesheet"
-        />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>VAZID - Quiz</title>
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/quiz.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+      rel="stylesheet"
+    />
 
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        />
-        <link
-            rel="icon"
-            href="images/favicon-16x16.png"
-            sizes="16x16"
-            type="image/png"
-        />
-        <link
-            rel="icon"
-            href="images/favicon-16x16.png"
-            sizes="32x32"
-            type="image/png"
-        />
-        <link
-            rel="icon"
-            href="images/favicon-32x32.png"
-            sizes="48x48"
-            type="image/png"
-        />
-        <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-        <link
-            rel="android-chrome-icon"
-            href="images/android-chrome-192x192.png"
-        />
-        <link
-            rel="android-chrome-icon"
-            href="images/android-chrome-512x512.png"
-        />
-        <script type="application/ld+json">
-            {
-                "@context": "https://schema.org",
-                "@type": "Person",
-                "name": "Sheikh Vazid Ahmed",
-                "jobTitle": "DevOps Engineer, MLOps & Cloud Solution Architect",
-                "url": "https://vazid.site",
-                "sameAs": [
-                    "https://www.linkedin.com/in/vazid",
-                    "https://github.com/sudovazid"
-                ],
-                "description": "DevOps Engineer, MLOps & Cloud Solution Architect with expertise in Cloud Architecture, DevOps, and Data Science",
-                "knowsAbout": [
-                    "Cloud Architecture",
-                    "DevOps",
-                    "Infrastructure as Code",
-                    "Containerization",
-                    "CI/CD",
-                    "Data Engineer",
-                    "MlOps",
-                    "Data science"
-                ],
-                "memberOf": {
-                    "@type": "Organization",
-                    "name": "**Sheikh Vazid**" // Replace with the company name
-                }
-            }
-        </script>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <div class="logo">
-                    <a href="../index.html">
-                        <!-- Light Mode Logo -->
-                        <img
-                            src="../images/light-logo.png"
-                            alt="VAZID Logo Light"
-                            class="logo-light"
-                        />
-                        <!-- Dark Mode Logo -->
-                        <img
-                            src="../images/dark-logo.png"
-                            alt="VAZID Logo Dark"
-                            class="logo-dark"
-                        />
-                    </a>
-                </div>
-                <ul class="nav-links">
-                    <li>
-                        <a href="../pages/project.html">CURRENT PROJECT</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="pages/blogs.html">BLOGS</a>
-                    </li>
-                    <li>
-                        <a href="../pages/quiz.html">QUIZ</a>
-                    </li>
-                    <li><a href="../pages/contact.html">CONTACT ME</a></li>
-                    <li><a href="../pages/about-me.html">ABOUT ME</a></li>
-                </ul>
-                <button id="dark-mode-toggle" class="dark-mode-toggle">
-                    <i class="fas fa-sun"></i>
-                    <i class="fas fa-moon"></i>
-                </button>
-                <div class="icon" onclick="toggleMenu()">☰</div>
-            </nav>
-        </header>
-        <section class="content">
-            <div class="card-container">
-                <div class="card">
-                    <h2>SQL BASIC</h2>
-                </div>
-                <div class="card">
-                    <h2>PYTHON</h2>
-                </div>
-                <div class="card">
-                    <h2>DOCKER</h2>
-                </div>
-                <div class="card">
-                    <h2>TERRAFORM</h2>
-                </div>
-                <div class="card">
-                    <h2>AWS</h2>
-                </div>
-                <div class="card">
-                    <h2>ML</h2>
-                </div>
-                <div class="card">
-                    <h2>GRAPH</h2>
-                </div>
-                <div class="card">
-                    <h2>LINUX</h2>
-                </div>
-                <div class="card">
-                    <h2>PNADAS</h2>
-                </div>
-            </div>
-        </section>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      rel="icon"
+      href="images/favicon-16x16.png"
+      sizes="16x16"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      href="images/favicon-16x16.png"
+      sizes="32x32"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      href="images/favicon-32x32.png"
+      sizes="48x48"
+      type="image/png"
+    />
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="android-chrome-icon" href="images/android-chrome-192x192.png" />
+    <link rel="android-chrome-icon" href="images/android-chrome-512x512.png" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Sheikh Vazid Ahmed",
+        "jobTitle": "DevOps Engineer, MLOps & Cloud Solution Architect",
+        "url": "https://vazid.site",
+        "sameAs": [
+          "https://www.linkedin.com/in/vazid",
+          "https://github.com/sudovazid"
+        ],
+        "description": "DevOps Engineer, MLOps & Cloud Solution Architect with expertise in Cloud Architecture, DevOps, and Data Science",
+        "knowsAbout": [
+          "Cloud Architecture",
+          "DevOps",
+          "Infrastructure as Code",
+          "Containerization",
+          "CI/CD",
+          "Data Engineer",
+          "MlOps",
+          "Data science"
+        ],
+        "memberOf": {
+          "@type": "Organization",
+          "name": "**Sheikh Vazid**" // Replace with the company name
+        }
+      }
+    </script>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="logo">
+          <a href="../index.html">
+            <!-- Light Mode Logo -->
+            <img
+              src="../images/light-logo.png"
+              alt="VAZID Logo Light"
+              class="logo-light"
+            />
+            <!-- Dark Mode Logo -->
+            <img
+              src="../images/dark-logo.png"
+              alt="VAZID Logo Dark"
+              class="logo-dark"
+            />
+          </a>
+        </div>
+        <ul class="nav-links">
+          <li>
+            <a href="../pages/project.html">CURRENT PROJECT</a>
+          </li>
+          <li class="dropdown">
+            <a href="../pages/blogs.html">BLOGS</a>
+          </li>
+          <li>
+            <a href="../pages/quiz.html">QUIZ</a>
+          </li>
+          <li><a href="../pages/contact.html">CONTACT ME</a></li>
+          <li><a href="../pages/about-me.html">ABOUT ME</a></li>
+        </ul>
+        <button id="dark-mode-toggle" class="dark-mode-toggle">
+          <i class="fas fa-sun"></i>
+          <i class="fas fa-moon"></i>
+        </button>
+        <div class="icon" onclick="toggleMenu()">☰</div>
+      </nav>
+    </header>
+    <section class="content">
+      <div class="card-container">
+        <div class="card">
+          <h2>SQL BASIC</h2>
+        </div>
+        <div class="card">
+          <h2>PYTHON</h2>
+        </div>
+        <div class="card">
+          <h2>DOCKER</h2>
+        </div>
+        <div class="card">
+          <h2>TERRAFORM</h2>
+        </div>
+        <div class="card">
+          <h2>AWS</h2>
+        </div>
+        <div class="card">
+          <h2>ML</h2>
+        </div>
+        <div class="card">
+          <h2>GRAPH</h2>
+        </div>
+        <div class="card">
+          <h2>LINUX</h2>
+        </div>
+        <div class="card">
+          <h2>PNADAS</h2>
+        </div>
+      </div>
+    </section>
 
-        <footer>
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>About</h3>
-                    <p>
-                        Sheikh Vazid Ahmed is a skilled DevOps Engineer and
-                        Cloud Architect proficient in GCP, AWS, and Azure.
-                    </p>
-                </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../pages/project.html">Project</a></li>
-                        <li><a href="../pages/blogs.html">BLOGS</a></li>
-                        <li><a href="../pages/contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Contact Me</h3>
-                    <p><strong>Email:</strong> sheikh.vazid.ahmed@gmail.com</p>
-                    <p>
-                        <strong>Current Location:</strong> Mangalore, Karnataka
-                    </p>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <div class="social-icons">
-                    <a
-                        href="https://www.facebook.com/vazid009"
-                        aria-label="Facebook"
-                        ><i class="fab fa-facebook"></i
-                    ></a>
-                    <a href="https://x.com/sudovazid" aria-label="x"
-                        ><i class="fab fa-x"></i
-                    ></a>
-                    <a
-                        href="https://www.instagram.com/sudovazid/"
-                        aria-label="Instagram"
-                        ><i class="fab fa-instagram"></i
-                    ></a>
-                    <a
-                        href="https://www.linkedin.com/in/vazid/"
-                        aria-label="LinkedIn"
-                        ><i class="fab fa-linkedin"></i
-                    ></a>
-                </div>
-                <p>&copy; 2024 VAZID. All rights reserved.</p>
-                <p>Designed by <a href="../pages/about-me.html">Me</a></p>
-            </div>
-        </footer>
+    <footer>
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3>About</h3>
+          <p>
+            Sheikh Vazid Ahmed is a skilled DevOps Engineer and Cloud Architect
+            proficient in GCP, AWS, and Azure.
+          </p>
+        </div>
+        <div class="footer-section">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="../pages/project.html">PROJECT</a></li>
+            <li><a href="../pages/blogs.html">BLOGS</a></li>
+            <li><a href="../pages/contact.html">CONTACT</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Contact Me</h3>
+          <p><strong>Email:</strong> sheikh.vazid.ahmed@gmail.com</p>
+          <p><strong>Current Location:</strong> Bengaluru, Karnataka</p>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="social-icons">
+          <a href="https://www.facebook.com/vazid009" aria-label="Facebook"
+            ><i class="fab fa-facebook"></i
+          ></a>
+          <a href="https://x.com/sudovazid" aria-label="x"
+            ><i class="fab fa-x"></i
+          ></a>
+          <a href="https://www.instagram.com/sudovazid/" aria-label="Instagram"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/vazid/" aria-label="LinkedIn"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </div>
+        <p>&copy; 2024 VAZID. All rights reserved.</p>
+        <p>Designed by <a href="../pages/about-me.html">Me</a></p>
+      </div>
+    </footer>
 
-        <script>
-            function toggleMenu() {
-                var x = document.querySelector(".nav-links");
-                if (x.style.display === "flex") {
-                    x.style.display = "none";
-                } else {
-                    x.style.display = "flex";
-                }
-            }
+    <script>
+      function toggleMenu() {
+        var x = document.querySelector(".nav-links");
+        if (x.style.display === "flex") {
+          x.style.display = "none";
+        } else {
+          x.style.display = "flex";
+        }
+      }
 
-            const darkModeToggle = document.getElementById("dark-mode-toggle");
-            darkModeToggle.addEventListener("click", () => {
-                document.body.classList.toggle("dark-mode");
-                darkModeToggle.classList.toggle("dark-mode");
-            });
-        </script>
-    </body>
+      const darkModeToggle = document.getElementById("dark-mode-toggle");
+      darkModeToggle.addEventListener("click", () => {
+        document.body.classList.toggle("dark-mode");
+        darkModeToggle.classList.toggle("dark-mode");
+      });
+    </script>
+  </body>
 </html>
