--- a/index.html
+++ b/index.html
@@ -112,18 +112,15 @@
       <section class="hero">
         <div class="hero-content">
           <h1>Sheikh Vazid Ahmed</h1>
-          <p class="tagline">
-            Cloud Solutions Architect, Devops Experts & MLOps Innovator
-          </p>
+          <p class="tagline">Cloud Solutions Architect and Devops Experts</p>
           <p class="intro">
             Transforming Complex Infrastructures into High-Performance, Scalable
             Cloud Ecosystems
           </p>
           <ul class="key-skills">
             <li>🚀 Cloud Architecture Specialist (AWS, GCP, Azure)</li>
-            <li>🔧 DevOps & MLOps Engineering</li>
+            <li>🔧 DevOps Engineering</li>
             <li>🌐 Infrastructure as Code Expert</li>
-            <li>🤖 Data solution experts</li>
           </ul>
           <div class="cta-buttons">
             <a href="pages/contact.html" class="cta-button secondary"
